--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -174,7 +174,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="{% url 'organization-list' %}">
+							<a href="{% url 'organization_list' %}">
 								<i class="la la-table"></i>
 								<p>Organization</p>
 							</a>
