--- a/projectsite/templates/org_list.html
+++ b/projectsite/templates/org_list.html
@@ -52,7 +52,11 @@
                                     <td>{{ object.college }}</td>
                                     <td>{{ object.description }}</td>
                                     <td>
+                                        <td>
                                         <a href="{% url 'organization-update' object.id %}">Edit</a>
+                                        <a href="{% url 'organization-delete' object.id %}" class="text-danger">Delete</a>
+                                    </td>
+
                                     </td>
                                     </tr>
                                     {% empty %}
