--- a/projectsite/templates/orgmember_del.html
+++ b/projectsite/templates/orgmember_del.html
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Delete Organization</div>
+                        <div class="card-title">Delete OrgMember</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
 
@@ -24,7 +24,7 @@
                                         <button type="submit" class="btn btn-danger btn-rounded">
                                             Yes, Delete
                                         </button>
-                                        <a href="{% url 'organization-list' %}" class="btn btn-secondary btn-rounded">
+                                        <a href="{% url 'orgmember-list' %}" class="btn btn-secondary btn-rounded">
                                             Cancel
                                         </a>
                                     </div>
