--- a/projectsite/templates/student_list.html
+++ b/projectsite/templates/student_list.html
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">List of Organizations</div>
+                        <div class="card-title">List of Students</div>
                         <div class="card-category">Page Subtitle</div>
                     </div>
                     <br />
@@ -28,8 +28,8 @@
     </div>
     <div class="col-md-6">
         <div class="pull-right">
-            <a href="{% url 'organization_add' %}" class="btn btn-success btn-rounded">
-                Add Organization
+            <a href="{% url 'student-add' %}" class="btn btn-success btn-rounded">
+                Add Student
             </a>
         </div>
     </div>
@@ -46,15 +46,15 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for object in object_list %}
+                                {% for student in students %}
                                 <tr>
-                                    <td>{{ object.name }}</td>
-                                    <td>{{ object.college }}</td>
-                                    <td>{{ object.description }}</td>
+                                    <td>{{ student.student_id }}</td>
+                                    <td>{{ student.lastname }}, {{ student.firstname }} {{ student.middlename }}</td>
+                                    <td>{{ student.program.prog_name }}</td>
                                     <td>
                                         <td>
-                                        <a href="{% url 'organization_update' object.id %}">Edit</a>
-                                        <a href="{% url 'organization_delete' object.id %}" class="text-danger">Delete</a>
+                                        <a href="{% url 'student-update' student.id %}">Edit</a>
+                                        <a href="{% url 'student-delete' student.id %}" class="text-danger">Delete</a>
                                     </td>
 
                                     </td>
