--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -168,9 +168,9 @@
 					</div>
 					<ul class="nav">
 						<li class="nav-item">
-							<a href="index.html">
-								<i class="la la-dashboard"></i>
-								<p>Dashboard</p>
+							<a href="{% url 'program-list' %}">
+								<i class="la la-program"></i>
+								<p>Program</p>
 							</a>
 						</li>
 						<li class="nav-item">
