--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -169,13 +169,13 @@
 					<ul class="nav">
 						<li class="nav-item">
 							<a href="{% url 'program-list' %}">
-								<i class="la la-program"></i>
+								<i class="la la-rocket"></i>
 								<p>Program</p>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="{% url 'organization-list' %}">
-								<i class="la la-table"></i>
+								<i class="la la-apple"></i>
 								<p>Organization</p>
 							</a>
 						</li>
@@ -199,7 +199,7 @@
 						</li>
 						<li class="nav-item active">
 							<a href="typography.html">
-								<i class="la la-font"></i>
+								<i class="la la-pencil"></i>
 								<p>Typography</p>
 								<span class="badge badge-danger">25</span>
 							</a>
